[package]
name = "clic"
description = "Core-Local Interrupt Controller (CLIC) RISC-V Privileged Architecture support crate"
authors = ["Zhouqi Jiang <luojia@hust.edu.cn>"]
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile-register = "0.2.2"
